create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1798,134 +1798,667 @@ body {
 .cid-qXkLTq97wh .mbr-text,
 .cid-qXkLTq97wh .mbr-section-btn {
   color: #413200;
+  text-align: right;
 }
-.cid-qXoZOHaOeq {
-  background-image: url("../../../assets/images/02.jpg");
-}
-.cid-qXoZOHaOeq .form-container {
-  transition: all .2s;
-  border: 1px solid #ffffff;
-  padding: 1rem;
-}
-.cid-qXoZOHaOeq .input-group-btn {
-  justify-content: center;
-}
-@media (min-width: 768px) {
-  .cid-qXoZOHaOeq .content-container {
-    padding-right: 5rem;
-  }
-}
-.cid-qXoEQ7NXYv {
-  padding-top: 60px;
-  padding-bottom: 30px;
+.cid-qXXFODQU36 {
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
-.cid-qXoEQ7NXYv .form-text {
-  color: #767676;
-}
 @media (max-width: 767px) {
-  .cid-qXoEQ7NXYv .content {
+  .cid-qXXFODQU36 .content {
     text-align: center;
   }
-  .cid-qXoEQ7NXYv .content > div:not(:last-child) {
+  .cid-qXXFODQU36 .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
-.cid-qXoEQ7NXYv .input-group {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  justify-content: center;
-}
-.cid-qXoEQ7NXYv .input-group-btn {
-  display: inline-block;
-}
-.cid-qXoEQ7NXYv .input-group-btn a.btn {
-  margin: 0 !important;
-  color: #fff;
-}
-.cid-qXoEQ7NXYv .img-logo img {
+.cid-qXXFODQU36 .img-logo img {
   height: 6rem;
 }
-.cid-qXoEQ7NXYv [type="email"] {
+.cid-qXXFODQU36 [type="email"] {
   font-size: .75rem;
+  margin-bottom: 5px;
   text-align: center;
   min-width: 150px;
 }
-.cid-qXoEQ7NXYv [type="submit"] {
+.cid-qXXFODQU36 .input-group-btn {
+  display: inline-block;
+}
+.cid-qXXFODQU36 .input-group-btn a.btn {
+  margin: 0 !important;
+}
+.cid-qXXFODQU36 .input-group {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cid-qXXFODQU36 [type="submit"] {
   padding: .75rem 1.5625rem !important;
   margin-left: .625rem;
   text-transform: none;
-  text-align: center;
 }
-.cid-qXoEQ7NXYv .copyright .mbr-text {
-  color: #767676;
-}
-@media (max-width: 767px) {
-  .cid-qXoEQ7NXYv .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-qXoEQ7NXYv .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #000;
-  opacity: .05;
-}
-.cid-qXoEQ7NXYv .footer-lower .social-list {
+.cid-qXXFODQU36 .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
 }
-.cid-qXoEQ7NXYv .footer-lower .social-list .mbr-iconfont-social {
+.cid-qXXFODQU36 .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
-  color: #232323;
+  color: #fff;
 }
-.cid-qXoEQ7NXYv .footer-lower .social-list .soc-item {
+.cid-qXXFODQU36 .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qXoEQ7NXYv .footer-lower .social-list a {
+.cid-qXXFODQU36 .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qXoEQ7NXYv .footer-lower .social-list a:hover {
+.cid-qXXFODQU36 .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qXoEQ7NXYv .footer-lower .social-list {
+  .cid-qXXFODQU36 .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-qXoEQ7NXYv form .input-group input.form-control,
-.cid-qXoEQ7NXYv form .input-group-btn .btn {
+@media (max-width: 767px) {
+  .cid-qXXFODQU36 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-qXXFODQU36 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-qXXFODQU36 form .input-group input.form-control,
+.cid-qXXFODQU36 form .input-group-btn .btn {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
 }
-.cid-qXoEQ7NXYv .form-inline {
+.cid-qXXFODQU36 .form-inline {
   justify-content: center;
 }
-.cid-qXoEQ7NXYv .form-group {
+.cid-qXXFODQU36 .form-group {
   margin: 0;
 }
 @media (max-width: 767px) {
-  .cid-qXoEQ7NXYv .foot-logo {
+  .cid-qXXFODQU36 .foot-logo {
     text-align: center !important;
   }
-  .cid-qXoEQ7NXYv .foot-title {
+  .cid-qXXFODQU36 .foot-title {
     text-align: center !important;
   }
-  .cid-qXoEQ7NXYv .mbr-text {
+  .cid-qXXFODQU36 .mbr-text {
     text-align: center !important;
   }
 }
-.cid-qXoEQ7NXYv .foot-logo {
+.cid-qXXFODQU36 .copyright > p {
+  color: #232323;
+}
+.cid-qXXFODQU36 .foot-logo {
+  color: #232323;
+}
+.cid-qXXFODQU36 .foot-title {
+  color: #232323;
+}
+.cid-qXXFODQU36 .form-text {
+  color: #232323;
+}
+.cid-qXXIjT4B28 .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-qXXIjT4B28 .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-qXXIjT4B28 a {
+  font-style: normal;
+}
+.cid-qXXIjT4B28 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-qXXIjT4B28 .nav-item a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qXXIjT4B28 .nav-item:focus,
+.cid-qXXIjT4B28 .nav-link:focus {
+  outline: none;
+}
+.cid-qXXIjT4B28 .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qXXIjT4B28 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qXXIjT4B28 .menu-logo {
+  margin-right: auto;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qXXIjT4B28 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qXXIjT4B28 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qXXIjT4B28 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qXXIjT4B28 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qXXIjT4B28 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qXXIjT4B28 .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qXXIjT4B28 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qXXIjT4B28 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qXXIjT4B28 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qXXIjT4B28 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qXXIjT4B28 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qXXIjT4B28 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qXXIjT4B28 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qXXIjT4B28 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qXXIjT4B28 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #333333;
+}
+.cid-qXXIjT4B28 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qXXIjT4B28 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qXXIjT4B28 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qXXIjT4B28 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qXXIjT4B28 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qXXIjT4B28 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qXXIjT4B28 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qXXIjT4B28 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qXXIjT4B28 .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qXXIjT4B28 .collapsed .btn {
+  display: flex;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.collapsing,
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
   text-align: center;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qXXIjT4B28 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qXXIjT4B28 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qXXIjT4B28 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qXXIjT4B28 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qXXIjT4B28 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qXXIjT4B28 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qXXIjT4B28 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qXXIjT4B28.navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qXXIjT4B28 img {
+    height: 3.8rem !important;
+  }
+  .cid-qXXIjT4B28 .btn {
+    display: flex;
+  }
+  .cid-qXXIjT4B28 button.navbar-toggler {
+    display: block;
+  }
+  .cid-qXXIjT4B28 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qXXIjT4B28 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse.collapsing,
+  .cid-qXXIjT4B28 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse.collapsing .navbar-nav,
+  .cid-qXXIjT4B28 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qXXIjT4B28 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qXXIjT4B28 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qXXIjT4B28 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qXXIjT4B28 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qXXIjT4B28 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qXXIjT4B28 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qXXIjT4B28 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qXXIjT4B28 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qXXIjT4B28 .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qXXIjT4B28 .navbar-collapse {
+  flex-basis: auto;
+}
+.cid-qXXIjT4B28 .nav-link:hover,
+.cid-qXXIjT4B28 .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-qXXIjUcq7L {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background: #ffffff;
+}
+.cid-qXXIjUcq7L .image-block {
+  margin: auto;
+}
+.cid-qXXIjUcq7L .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qXXIjUcq7L figcaption {
+  position: relative;
+}
+.cid-qXXIjUcq7L figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qXXIjUcq7L .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qXXIjVgPv2 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+}
+@media (min-width: 992px) {
+  .cid-qXXIjVgPv2 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-qXXIjVgPv2 .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qXXIjVgPv2 .mbr-text {
+    text-align: center;
+  }
+}
+.cid-qXXIjVgPv2 H1 {
+  color: #675003;
+}
+.cid-qXXIjVgPv2 .mbr-text,
+.cid-qXXIjVgPv2 .mbr-section-btn {
+  color: #413200;
+  text-align: right;
+}
+.cid-qXXIjWgibP {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .cid-qXXIjWgibP .content {
+    text-align: center;
+  }
+  .cid-qXXIjWgibP .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-qXXIjWgibP .img-logo img {
+  height: 6rem;
+}
+.cid-qXXIjWgibP [type="email"] {
+  font-size: .75rem;
+  margin-bottom: 5px;
+  text-align: center;
+  min-width: 150px;
+}
+.cid-qXXIjWgibP .input-group-btn {
+  display: inline-block;
+}
+.cid-qXXIjWgibP .input-group-btn a.btn {
+  margin: 0 !important;
+}
+.cid-qXXIjWgibP .input-group {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.cid-qXXIjWgibP [type="submit"] {
+  padding: .75rem 1.5625rem !important;
+  margin-left: .625rem;
+  text-transform: none;
+}
+.cid-qXXIjWgibP .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.cid-qXXIjWgibP .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-qXXIjWgibP .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qXXIjWgibP .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qXXIjWgibP .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qXXIjWgibP .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qXXIjWgibP .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-qXXIjWgibP .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-qXXIjWgibP form .input-group input.form-control,
+.cid-qXXIjWgibP form .input-group-btn .btn {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.cid-qXXIjWgibP .form-inline {
+  justify-content: center;
+}
+.cid-qXXIjWgibP .form-group {
+  margin: 0;
+}
+@media (max-width: 767px) {
+  .cid-qXXIjWgibP .foot-logo {
+    text-align: center !important;
+  }
+  .cid-qXXIjWgibP .foot-title {
+    text-align: center !important;
+  }
+  .cid-qXXIjWgibP .mbr-text {
+    text-align: center !important;
+  }
+}
+.cid-qXXIjWgibP .copyright > p {
+  color: #232323;
+}
+.cid-qXXIjWgibP .foot-logo {
+  color: #232323;
+}
+.cid-qXXIjWgibP .foot-title {
+  color: #232323;
+}
+.cid-qXXIjWgibP .form-text {
+  color: #232323;
 }
