create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1904,15 +1904,18 @@ body {
 }
 .cid-qXXFODQU36 .copyright > p {
   color: #232323;
+  text-align: center;
 }
 .cid-qXXFODQU36 .foot-logo {
   color: #232323;
 }
 .cid-qXXFODQU36 .foot-title {
   color: #232323;
+  text-align: center;
 }
 .cid-qXXFODQU36 .form-text {
   color: #232323;
+  text-align: right;
 }
 .cid-qXXIjT4B28 .navbar {
   background: #ffffff;
@@ -2452,13 +2455,16 @@ body {
 }
 .cid-qXXIjWgibP .copyright > p {
   color: #232323;
+  text-align: center;
 }
 .cid-qXXIjWgibP .foot-logo {
   color: #232323;
 }
 .cid-qXXIjWgibP .foot-title {
   color: #232323;
+  text-align: center;
 }
 .cid-qXXIjWgibP .form-text {
   color: #232323;
+  text-align: right;
 }
