create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1794,6 +1794,7 @@ body {
 }
 .cid-qXkLTq97wh H1 {
   color: #675003;
+  text-align: center;
 }
 .cid-qXkLTq97wh .mbr-text,
 .cid-qXkLTq97wh .mbr-section-btn {
@@ -2345,6 +2346,7 @@ body {
 }
 .cid-qXXIjVgPv2 H1 {
   color: #675003;
+  text-align: center;
 }
 .cid-qXXIjVgPv2 .mbr-text,
 .cid-qXXIjVgPv2 .mbr-section-btn {
